--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,31 @@
-name: JAVA-Maven CI
+name: Maven CI/CD
 
 on:
  push:
     branches: [ master ]
-  
+  pull_request:
+    branches: [ master ]
 
 jobs:
-  build-job: 
+  build_and_test:
+
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Set up JDK 14
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v1
       with:
         java-version: 14
 
     - name: Build project with Maven
       run: mvn -B package --file pom.xml
+      
+  security:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/maven@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}  
