--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,19 @@
     <groupId>org.kth</groupId>
     <artifactId>github-action-maven-tutorial</artifactId>
     <version>1.0-SNAPSHOT</version>
+         
+    <distributionManagement>
+    <repository>
+        <id>central</id>
+        <name>a0dgnbwpmjncj-artifactory-primary-0-releases</name>
+        <url>https://twinkle12.jfrog.io/artifactory/default-maven-virtual</url>
+    </repository>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>a0dgnbwpmjncj-artifactory-primary-0-snapshots</name>
+        <url>https://twinkle12.jfrog.io/artifactory/default-maven-virtual</url>
+    </snapshotRepository>
+</distributionManagement>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
