--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,14 +21,14 @@ jobs:
     - name: Build project with Maven
       run: mvn -B package --file pom.xml
       
-  security:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@master
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/maven@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}  
+  #security:
+    #runs-on: ubuntu-latest
+   # steps:
+    #  - uses: actions/checkout@master
+      #- name: Run Snyk to check for vulnerabilities
+      #  uses: snyk/actions/maven@master
+       # env:
+        #  SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}  
           
   artifactoryUpload:
     name: Upload Trigger
