--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,20 @@
     <groupId>org.kth</groupId>
     <artifactId>github-action-maven-tutorial</artifactId>
     <version>1.0-SNAPSHOT</version>
+    
+         
+    <distributionManagement>
+     <snapshotRepository>
+        <id>snapshots</id>
+        <name>a0z5pv3du13yd-artifactory-primary-0-snapshots</name>
+        <url>https://githubaction.jfrog.io/artifactory/action-libs-snapshot</url>
+     </snapshotRepository>
+      <repository>
+        <id>central</id>
+        <name>a0z5pv3du13yd-artifactory-primary-0-releases</name>
+        <url>https://githubaction.jfrog.io/artifactory/action-libs-release</url>
+    </repository>        
+  </distributionManagement>    
          
 
     <properties>
