--- a/.github/workflows/env.yaml
+++ b/.github/workflows/env.yaml
@@ -23,7 +23,7 @@ jobs:
           echo "STEP_ENV: ${STEP_ENV}"
 
   log-default-env:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: default environment variable
         run: |
