--- a/.github/workflows/env.yaml
+++ b/.github/workflows/env.yaml
@@ -21,6 +21,12 @@ jobs:
           echo "WF_ENV: ${WF_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV: ${STEP_ENV}"
+    steps:
+      - name: show cmd
+        env: 
+          WORKING_DIR: pwd
+        run: |
+          echo "WORKING_DIR: ${WORKING_DIR}"
 
   log-default-env:
     runs_on: ubuntu-latest
