--- a/.github/workflows/env.yaml
+++ b/.github/workflows/env.yaml
@@ -25,7 +25,7 @@ jobs:
         env: 
           WORKING_DIR: pwd
         run: |
-          echo "WORKING_DIR: ${WORKING_DIR}"
+          ${WORKING_DIR}
 
   log-default-env:
     runs-on: ubuntu-latest
