--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,9 +42,9 @@ jobs:
         
     - name: build
       run: mvn -s setting.xml deploy    
-      env:
-        ARTIFACT_TOKEN: ${{ secrets.ARTIFACT_TOKEN }}
-    - name: cmds  
-      run: |
-        pwd
-        echo " build is working "
+     # env:
+      #  ARTIFACT_TOKEN: ${{ secrets.ARTIFACT_TOKEN }}
+ #   - name: cmds  
+  #    run: |
+    #    pwd
+     #   echo " build is working "
